created new default level and rebuilt lighting

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -45,8 +45,8 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@MAX-PC
 LastExecutedLaunchName=MAX-PC
 LastExecutedPIEPreviewDevice=
@@ -88,9 +88,12 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/Maps
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/Maps/Level_Chapter1
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -114,7 +117,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
+UNR=C:/Users/maxsa/Desktop/Unreal Projects/UnrealForBeginnersTut/Content/Maps
 BRUSH=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
 FBX=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
 FBXAnim=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
@@ -124,7 +127,7 @@ GenericOpen=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
 GenericSave=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
 MeshImportExport=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
 WorldRoot=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
-Level=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
+Level=C:/Users/maxsa/Desktop/Unreal Projects/UnrealForBeginnersTut/Content/Maps
 Project=E:/UE_4.19/
 
 [ModuleFileTracking]
@@ -702,5 +705,36 @@ SceneOutliner.TimeStamp=2018.05.11-14.28.01
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2018.05.11-14.27.54
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2018.05.11-14.27.58
+MovieSceneCapture.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2018.05.11-14.27.59
+NewLevelDialog.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2018.05.11-14.27.55
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+
+[MRU]
+MRUItem0=/Game/Maps/Level_Chapter1
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
 
 
