added original and imported landscapes, used all sculpt tools

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -770,6 +770,28 @@ LandscapeEditorObject.LandscapeEditor=True
 LandscapeEditorObject.Brush Settings=True
 LandscapeEditorObject.Tool Settings=True
 LandscapeEditorObject.Target Layers=True
+LandscapeGizmoActiveActor.TransformCommon=True
+LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
+LandscapeGizmoActiveActor.Gizmo=True
+LandscapeGizmoActiveActor.Rendering=True
+LandscapeGizmoActiveActor.Input=True
+LandscapeGizmoActiveActor.Actor=True
+Landscape.TransformCommon=True
+Landscape.LOD=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.Landscape=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Input=True
+Landscape.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Input=True
+Actor.Actor=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter1
@@ -793,11 +815,16 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
+BrushRadius=1059.985474
+RainAmount=256
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [AssetEditorToolkitTabLocation]
 /Game/Maps/Level_Chapter1_BuiltData.Level_Chapter1_BuiltData=1
+
+[MessageLog]
+LastLogListing=LightingResults
 
 
