Created actual lanscape to use with sculpt, erosion, hydro erosion, noise, and smooth tool

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,13 +93,13 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Level_Chapter1
+LastLevel=/Game/Maps/Level_Chapter2
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=266.000 Y=379.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -794,7 +794,8 @@ Actor.Input=True
 Actor.Actor=True
 
 [MRU]
-MRUItem0=/Game/Maps/Level_Chapter1
+MRUItem0=/Game/Maps/Level_Chapter2
+MRUItem1=/Game/Maps/Level_Chapter1
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -815,8 +816,12 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
-BrushRadius=1059.985474
 RainAmount=256
+ToolStrength=0.100000
+ErodeThresh=128
+ErodeSurfaceThickness=512
+RainDistScale=12.000000
+NoiseScale=64.000000
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
