Created material and got material editor open

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Materials
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
@@ -97,6 +97,7 @@ LastLevel=/Game/Maps/Level_Chapter2
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Materials/M_LandscapePractice.M_LandscapePractice
 
 [RootWindow]
 ScreenPosition=X=266.000 Y=379.000
@@ -792,6 +793,21 @@ Actor.TransformCommon=True
 Actor.Rendering=True
 Actor.Input=True
 Actor.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+PreviewMaterial.ImportSettings=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter2
@@ -831,5 +847,12 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [MessageLog]
 LastLogListing=LightingResults
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
+[MaterialEditor]
+PrimType=1
 
 
