added basic Constant3Vector, set constant to green and connected to base color for material

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -808,6 +808,8 @@ PreviewMaterial.Lightmass=True
 PreviewMaterial.Previewing=True
 PreviewMaterial.Thumbnail=True
 PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter2
@@ -854,5 +856,20 @@ bShowMobileStats=False
 
 [MaterialEditor]
 PrimType=1
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
 
