--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,12 +91,14 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Materials
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Maps/Level_Chapter2
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Materials/M_LandscapePractice.M_LandscapePractice
 
 [RootWindow]
