imported textures into unreal content browser

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -812,6 +812,8 @@ PreviewMaterial.Thumbnail=True
 PreviewMaterial.ImportSettings=True
 MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter2
