--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Textures
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -98,7 +98,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Level_Chapter2
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Materials/M_LandscapePractice.M_LandscapePractice
 
 [RootWindow]
@@ -124,7 +124,7 @@ UNR=C:/Users/maxsa/Desktop/Unreal Projects/UnrealForBeginnersTut/Content/Maps
 BRUSH=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
 FBX=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
 FBXAnim=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
-GenericImport=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
+GenericImport=C:/Users/maxsa/Desktop/Models _ Textures/Terrain/Dirt_D.jpg
 GenericExport=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
 GenericOpen=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
 GenericSave=C:/Users/maxsa/Desktop/Unreal Projects/UE4forbeginners/Content/
@@ -814,6 +814,9 @@ MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
 MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter2
