changed roughness from constant to parameter, created material instance, and used this instance in the landscape. Changed roughness from 0.75 to 0.8

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -817,6 +817,14 @@ MaterialExpressionConstant.MaterialExpression=True
 MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionComment.MaterialExpressionComment=True
+MaterialExpressionComment.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter2
