used scalar parameter, multiply, and landscape coords to change texture size of grass material

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Textures
+ContentBrowserTab1.SelectedPaths=/Game/Materials
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -98,8 +98,9 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Level_Chapter2
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Materials/M_LandscapePractice.M_LandscapePractice
+OpenAssetsAtExit=/Game/Materials/M_LandscapePractice_Inst.M_LandscapePractice_Inst
 
 [RootWindow]
 ScreenPosition=X=266.000 Y=379.000
@@ -825,6 +826,11 @@ MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialEditorInstanceConstant.ParameterGroups=True
 MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionLandscapeLayerCoords.MaterialExpressionLandscapeLayerCoords=True
+MaterialExpressionLandscapeLayerCoords.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter2
@@ -886,5 +892,11 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
+bWantsMobileStats=False
 
 
