--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -95,12 +95,10 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/Level_Chapter2
+LastLevel=/Game/Maps/Level_Chapter3
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Materials/M_LandscapePractice.M_LandscapePractice
-OpenAssetsAtExit=/Game/Materials/M_LandscapePractice_Inst.M_LandscapePractice_Inst
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=266.000 Y=379.000
@@ -833,8 +831,9 @@ MaterialExpressionMultiply.MaterialExpression=True
 MaterialExpression.MaterialExpression=True
 
 [MRU]
-MRUItem0=/Game/Maps/Level_Chapter2
-MRUItem1=/Game/Maps/Level_Chapter1
+MRUItem0=/Game/Maps/Level_Chapter3
+MRUItem1=/Game/Maps/Level_Chapter2
+MRUItem2=/Game/Maps/Level_Chapter1
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
