blended landscape textures and painted on the landscape using layers

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -829,6 +829,8 @@ MaterialExpressionLandscapeLayerCoords.MaterialExpression=True
 MaterialExpressionMultiply.MaterialExpressionMultiply=True
 MaterialExpressionMultiply.MaterialExpression=True
 MaterialExpression.MaterialExpression=True
+MaterialExpressionLandscapeLayerBlend.MaterialExpressionLandscapeLayerBlend=True
+MaterialExpressionLandscapeLayerBlend.MaterialExpression=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter3
@@ -897,5 +899,10 @@ bShowGrid=False
 bDrawGrid=False
 PrimType=1
 bWantsMobileStats=False
+
+[DetailPropertyExpansion]
+MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[1]\" \"Object.Layers.Layers[2]\" \"Object.Layers.Layers[3]\" "
+MaterialExpression=
+Object=
 
 
