imported static mesh cabin and textures into unreal

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -99,6 +99,7 @@ LastLevel=/Game/Maps/Level_Chapter3
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Geometry/Cabin.Cabin
 
 [RootWindow]
 ScreenPosition=X=266.000 Y=379.000
@@ -831,6 +832,23 @@ MaterialExpressionMultiply.MaterialExpression=True
 MaterialExpression.MaterialExpression=True
 MaterialExpressionLandscapeLayerBlend.MaterialExpressionLandscapeLayerBlend=True
 MaterialExpressionLandscapeLayerBlend.MaterialExpression=True
+PaintBrushSettings.Brush=True
+PaintBrushSettings.View=True
+PaintModeSettings.VertexPainting=True
+PaintModeSettings.Visualization=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Material=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter3
@@ -857,11 +875,12 @@ NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 RainAmount=256
-ToolStrength=0.100000
+ToolStrength=0.200000
 ErodeThresh=128
 ErodeSurfaceThickness=512
 RainDistScale=12.000000
 NoiseScale=64.000000
+BrushRadius=1320.197876
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
@@ -900,9 +919,84 @@ bDrawGrid=False
 PrimType=1
 bWantsMobileStats=False
 
+[/Script/UnrealEd.FbxImportUI]
+bImportMaterials=False
+bImportTextures=False
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
 [DetailPropertyExpansion]
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[1]\" \"Object.Layers.Layers[2]\" \"Object.Layers.Layers[3]\" "
 MaterialExpression=
 Object=
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
 
