created materials for cabin and applied them in the asset section

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Geometry
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -100,6 +100,10 @@ LastLevel=/Game/Maps/Level_Chapter3
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Geometry/Cabin.Cabin
+OpenAssetsAtExit=/Game/Materials/M_Slats.M_Slats
+OpenAssetsAtExit=/Game/Materials/M_Tiles.M_Tiles
+OpenAssetsAtExit=/Game/Materials/M_Chimney.M_Chimney
+OpenAssetsAtExit=/Game/Materials/M_Door.M_Door
 
 [RootWindow]
 ScreenPosition=X=266.000 Y=379.000
@@ -714,6 +718,8 @@ NewLevelDialog.TimeStamp=2018.05.11-14.27.59
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2018.05.11-14.27.55
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2018.05.11-14.28.05
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
