created emissive material (glass window) and applied it to cabin geometry

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,6 +104,7 @@ OpenAssetsAtExit=/Game/Materials/M_Slats.M_Slats
 OpenAssetsAtExit=/Game/Materials/M_Tiles.M_Tiles
 OpenAssetsAtExit=/Game/Materials/M_Chimney.M_Chimney
 OpenAssetsAtExit=/Game/Materials/M_Door.M_Door
+OpenAssetsAtExit=/Game/Materials/M_Beam.M_Beam
 
 [RootWindow]
 ScreenPosition=X=266.000 Y=379.000
