added rocks to environment

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,6 +100,8 @@ LastLevel=/Game/Maps/Level_Chapter3
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Geometry/Rock.Rock
+OpenAssetsAtExit=/Game/Materials/M_Rock.M_Rock
 
 [RootWindow]
 ScreenPosition=X=266.000 Y=379.000
@@ -851,6 +853,8 @@ StaticMesh.StaticMesh=True
 StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.Navigation=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter3
@@ -877,12 +881,13 @@ NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 RainAmount=256
-ToolStrength=0.200000
+ToolStrength=0.057143
 ErodeThresh=128
 ErodeSurfaceThickness=512
 RainDistScale=12.000000
 NoiseScale=64.000000
-BrushRadius=648.988281
+BrushRadius=269.758209
+BrushFalloff=0.195238
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
@@ -896,6 +901,7 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 /Game/Materials/M_Door.M_Door=0
 /Game/Materials/M_Beam.M_Beam=0
 /Game/Materials/M_Window.M_Window=0
+/Game/Materials/M_Rock.M_Rock=0
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -905,7 +911,7 @@ bUseUnsortedMenus=False
 bShowMobileStats=False
 
 [MaterialEditor]
-PrimType=3
+PrimType=1
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1009,6 +1015,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Rock.Rock;
 RecentlyPlaced=/Game/Geometry/Cabin.Cabin;
 
 
