created very complex grass foliage, and set a piece into the level

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -98,10 +98,12 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/Level_Chapter4
+LastLevel=/Game/Maps/Level_Chapter5
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Geometry/GrassClump.GrassClump
+OpenAssetsAtExit=/Game/Materials/M_GrassMaster.M_GrassMaster
 
 [RootWindow]
 ScreenPosition=X=266.000 Y=379.000
@@ -855,12 +857,20 @@ StaticMesh.ImportSettings=True
 StaticMesh.Navigation=True
 MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
 MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionPerInstanceFadeAmount.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionVertexColor.MaterialExpression=True
 
 [MRU]
-MRUItem0=/Game/Maps/Level_Chapter4
-MRUItem1=/Game/Maps/Level_Chapter3
-MRUItem2=/Game/Maps/Level_Chapter2
-MRUItem3=/Game/Maps/Level_Chapter1
+MRUItem0=/Game/Maps/Level_Chapter5
+MRUItem1=/Game/Maps/Level_Chapter4
+MRUItem2=/Game/Maps/Level_Chapter3
+MRUItem3=/Game/Maps/Level_Chapter2
+MRUItem4=/Game/Maps/Level_Chapter1
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -904,6 +914,9 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 /Game/Materials/M_Window.M_Window=0
 /Game/Materials/M_Rock.M_Rock=0
 /Game/Geometry/Rock.Rock=0
+/Game/Materials/M_BurntWood.M_BurntWood=0
+/Game/Geometry/firelogs.firelogs=0
+/Game/Materials/M_Grass_Inst.M_Grass_Inst=1
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -959,7 +972,7 @@ VertexColorImportOption=Ignore
 VertexOverrideColor=(B=255,G=255,R=255,A=255)
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
-bAutoGenerateCollision=True
+bAutoGenerateCollision=False
 bCombineMeshes=False
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
@@ -1017,6 +1030,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/GrassClump.GrassClump;
 RecentlyPlaced=/Game/Geometry/firelogs.firelogs;
 RecentlyPlaced=/Game/Geometry/Rock.Rock;
 RecentlyPlaced=/Game/Geometry/Cabin.Cabin;
