added grass using foliage tool all over level

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,7 +101,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Level_Chapter5
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Geometry/GrassClump.GrassClump
 OpenAssetsAtExit=/Game/Materials/M_GrassMaster.M_GrassMaster
 
@@ -864,6 +864,26 @@ MaterialExpressionPerInstanceFadeAmount.MaterialExpression=True
 MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
 MaterialExpressionMaterialFunctionCall.MaterialExpression=True
 MaterialExpressionVertexColor.MaterialExpression=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Input=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
+FoliageType_InstancedStaticMesh.Mesh=True
+FoliageType_InstancedStaticMesh.Painting=True
+FoliageType_InstancedStaticMesh.Placement=True
+FoliageType_InstancedStaticMesh.InstanceSettings=True
+FoliageType_InstancedStaticMesh.Physics=True
+FoliageType_InstancedStaticMesh.Scalability=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter5
@@ -1034,5 +1054,17 @@ RecentlyPlaced=/Game/Geometry/GrassClump.GrassClump;
 RecentlyPlaced=/Game/Geometry/firelogs.firelogs;
 RecentlyPlaced=/Game/Geometry/Rock.Rock;
 RecentlyPlaced=/Game/Geometry/Cabin.Cabin;
+
+[FoliageEdit]
+Radius=246.000000
+PaintDensity=1.000000
+bFilterStaticMesh=False
+bFilterBSP=False
+WindowPosition=-1,-1,284,400
+bFilterFoliage=False
+bShowPaletteItemDetails=True
+bShowPaletteItemTooltips=True
+ActivePaletteViewMode=0
+PaletteThumbnailScale=0.300000
 
 
