enabled density scaling, changed culling distance, disabled shadows, and changed tint of grass to match the ground and make it look better

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,7 +101,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Level_Chapter5
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Geometry/GrassClump.GrassClump
 OpenAssetsAtExit=/Game/Materials/M_GrassMaster.M_GrassMaster
 
@@ -884,6 +884,9 @@ FoliageType_InstancedStaticMesh.Placement=True
 FoliageType_InstancedStaticMesh.InstanceSettings=True
 FoliageType_InstancedStaticMesh.Physics=True
 FoliageType_InstancedStaticMesh.Scalability=True
+InstancedFoliageActor.TransformCommon=True
+InstancedFoliageActor.Input=True
+InstancedFoliageActor.Actor=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter5
@@ -1057,7 +1060,7 @@ RecentlyPlaced=/Game/Geometry/Cabin.Cabin;
 
 [FoliageEdit]
 Radius=246.000000
-PaintDensity=1.000000
+PaintDensity=0.300000
 bFilterStaticMesh=False
 bFilterBSP=False
 WindowPosition=-1,-1,284,400
