added tree to geometry, set up same as foliage, used LODs to improve optimization at distances

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,8 +102,7 @@ LastLevel=/Game/Maps/Level_Chapter5
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Geometry/GrassClump.GrassClump
-OpenAssetsAtExit=/Game/Materials/M_GrassMaster.M_GrassMaster
+OpenAssetsAtExit=/Game/Geometry/Tree.Tree
 
 [RootWindow]
 ScreenPosition=X=266.000 Y=379.000
@@ -887,6 +886,9 @@ FoliageType_InstancedStaticMesh.Scalability=True
 InstancedFoliageActor.TransformCommon=True
 InstancedFoliageActor.Input=True
 InstancedFoliageActor.Actor=True
+StaticMesh.LOD1=True
+StaticMesh.LOD2=True
+StaticMesh.LOD3=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter5
@@ -925,6 +927,7 @@ BrushFalloff=0.471428
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+StaticMesh=StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,
 
 [AssetEditorToolkitTabLocation]
 /Game/Maps/Level_Chapter1_BuiltData.Level_Chapter1_BuiltData=1
@@ -940,9 +943,16 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 /Game/Materials/M_BurntWood.M_BurntWood=0
 /Game/Geometry/firelogs.firelogs=0
 /Game/Materials/M_Grass_Inst.M_Grass_Inst=1
+/Game/Materials/M_TreeFront.M_TreeFront=0
+/Game/Materials/M_Branch.M_Branch=0
+/Game/Materials/M_Bark.M_Bark=0
+/Engine/EngineMeshes/Cube.Cube=0
+/Game/Geometry/GrassClump.GrassClump=0
+/Game/Materials/M_GrassMaster.M_GrassMaster=0
+/Game/Geometry/Tree.Tree=0
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -999,7 +1009,7 @@ bAutoGenerateCollision=False
 bCombineMeshes=False
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
-bImportMeshLODs=False
+bImportMeshLODs=True
 NormalImportMethod=FBXNIM_ImportNormals
 NormalGenerationMethod=MikkTSpace
 bConvertScene=True
@@ -1053,6 +1063,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Tree.Tree;
 RecentlyPlaced=/Game/Geometry/GrassClump.GrassClump;
 RecentlyPlaced=/Game/Geometry/firelogs.firelogs;
 RecentlyPlaced=/Game/Geometry/Rock.Rock;
@@ -1069,5 +1080,10 @@ bShowPaletteItemDetails=True
 bShowPaletteItemTooltips=True
 ActivePaletteViewMode=0
 PaletteThumbnailScale=0.300000
+
+[DetailCategoriesAdvanced]
+FbxImportUI.Mesh=True
+StaticMesh.LODCustomMode=True
+StaticMesh.StaticMesh=False
 
 
