added more dirt under trees that are located at mountains

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,7 +91,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Geometry
+ContentBrowserTab1.SelectedPaths=/Game
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -101,7 +101,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Level_Chapter5
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Geometry/Tree.Tree
 
 [RootWindow]
@@ -1070,12 +1070,12 @@ RecentlyPlaced=/Game/Geometry/Rock.Rock;
 RecentlyPlaced=/Game/Geometry/Cabin.Cabin;
 
 [FoliageEdit]
-Radius=1159.699219
+Radius=359.699219
 PaintDensity=1.000000
 bFilterStaticMesh=False
 bFilterBSP=False
 WindowPosition=-1,-1,284,400
-bFilterFoliage=False
+bFilterFoliage=True
 bShowPaletteItemDetails=True
 bShowPaletteItemTooltips=True
 ActivePaletteViewMode=0
