--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,6 +50,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@MAX-PC
 LastExecutedLaunchName=MAX-PC
 LastExecutedPIEPreviewDevice=
+LastExecutedPlayModeLocation=PlayLocation_CurrentCameraLocation
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -98,10 +99,10 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/Level_Chapter5
+LastLevel=/Game/Maps/Level_Chapter6
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Geometry/Tree.Tree
 
 [RootWindow]
@@ -889,13 +890,32 @@ InstancedFoliageActor.Actor=True
 StaticMesh.LOD1=True
 StaticMesh.LOD2=True
 StaticMesh.LOD3=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.Lightmass=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
 
 [MRU]
-MRUItem0=/Game/Maps/Level_Chapter5
-MRUItem1=/Game/Maps/Level_Chapter4
-MRUItem2=/Game/Maps/Level_Chapter3
-MRUItem3=/Game/Maps/Level_Chapter2
-MRUItem4=/Game/Maps/Level_Chapter1
+MRUItem0=/Game/Maps/Level_Chapter6
+MRUItem1=/Game/Maps/Level_Chapter5
+MRUItem2=/Game/Maps/Level_Chapter4
+MRUItem3=/Game/Maps/Level_Chapter3
+MRUItem4=/Game/Maps/Level_Chapter2
+MRUItem5=/Game/Maps/Level_Chapter1
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
