--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -908,6 +908,28 @@ BP_Sky_Sphere_C.Override settings=True
 BP_Sky_Sphere_C.Rendering=True
 BP_Sky_Sphere_C.Input=True
 BP_Sky_Sphere_C.Actor=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Rendering=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.LightFunction=True
+SpotLight.Light Profiles=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.Tags=True
+SpotLight.Cooking=True
+SpotLight.Actor=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter6
@@ -1083,6 +1105,8 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Geometry/Tree.Tree;
 RecentlyPlaced=/Game/Geometry/GrassClump.GrassClump;
 RecentlyPlaced=/Game/Geometry/firelogs.firelogs;
