changed all landscape textures to shared: Wrap, and changed world setting environmental color to grey

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ LastLevel=/Game/Maps/Level_Chapter6
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Geometry/Tree.Tree
+OpenAssetsAtExit=/Game/Materials/M_Landscape.M_Landscape
 
 [RootWindow]
 ScreenPosition=X=266.000 Y=379.000
@@ -930,6 +930,16 @@ SpotLight.DistanceFieldShadows=True
 SpotLight.Tags=True
 SpotLight.Cooking=True
 SpotLight.Actor=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.Physics=True
+WorldSettings.Rendering=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter6
@@ -994,7 +1004,7 @@ StaticMesh=StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSe
 /Game/Geometry/Tree.Tree=0
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1129,5 +1139,7 @@ PaletteThumbnailScale=0.300000
 FbxImportUI.Mesh=True
 StaticMesh.LODCustomMode=True
 StaticMesh.StaticMesh=False
+WorldSettings.Lightmass=True
+WorldSettings.World=True
 
 
