added shadows to grass and added fog to level

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -940,6 +940,23 @@ WorldSettings.Audio=True
 WorldSettings.LODSystem=True
 WorldSettings.VR=True
 WorldSettings.Tick=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Lighting=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Actor=True
+ExponentialHeightFog.TransformCommon=True
+ExponentialHeightFog.ExponentialHeightFogComponent=True
+ExponentialHeightFog.InscatteringTexture=True
+ExponentialHeightFog.DirectionalInscattering=True
+ExponentialHeightFog.VolumetricFog=True
+ExponentialHeightFog.Rendering=True
+ExponentialHeightFog.Tags=True
+ExponentialHeightFog.Activation=True
+ExponentialHeightFog.Cooking=True
+ExponentialHeightFog.Actor=True
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter6
@@ -1115,6 +1132,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Geometry/Tree.Tree;
