changed post processing effects to make level look nicer

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -92,7 +92,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Materials
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -106,7 +106,7 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/Materials/M_Landscape.M_Landscape
 
 [RootWindow]
-ScreenPosition=X=266.000 Y=379.000
+ScreenPosition=X=2085.000 Y=-19.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -957,6 +957,16 @@ ExponentialHeightFog.Tags=True
 ExponentialHeightFog.Activation=True
 ExponentialHeightFog.Cooking=True
 ExponentialHeightFog.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Mobile Tonemapper=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
+PostProcessVolume.LOD=False
 
 [MRU]
 MRUItem0=/Game/Maps/Level_Chapter6
@@ -997,6 +1007,7 @@ BrushFalloff=0.471428
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 StaticMesh=StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,
+PostProcessVolume=PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|Bloom,
 
 [AssetEditorToolkitTabLocation]
 /Game/Maps/Level_Chapter1_BuiltData.Level_Chapter1_BuiltData=1
@@ -1067,6 +1078,11 @@ LodDistance7=0.000000
 MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[1]\" \"Object.Layers.Layers[2]\" \"Object.Layers.Layers[3]\" "
 MaterialExpression=
 Object=
+WorldSettings="\"Object.Lightmass.LightmassSettings\" "
+Info="\"Object.Lightmass.LightmassSettings\" "
+PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1132,6 +1148,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -1159,5 +1176,10 @@ StaticMesh.LODCustomMode=True
 StaticMesh.StaticMesh=False
 WorldSettings.Lightmass=True
 WorldSettings.World=True
+PostProcessVolume.Actor=True
+PostProcessVolume.BrushSettings=True
+
+[ColorGrading]
+Color_Grading_Global_Saturation_IsRGB=True
 
 
